# flask-login-role

./: README.md  setup.cfg
examples/: app.py
flask_login_role/: __init__.py  role_required.py
sample/: app.py  demo_users.py
