[metadata]
name = Flask-Login-Role
version = 0.0.2
author = glyzinieh
author_email = wisteriatp@gmail.com
description = A super light-weight alternative to Flask-User or Flask-Security that adds role requirements for views to Flask-Login.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    flask
    flask-login

[options.packages.find]
exclude =
    examples*
